; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifaddr_withnet.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifaddr_withnet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ifaddr_withnet(%struct.sockaddr* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.sockaddr*, align 8
  store %struct.sockaddr* %0, %struct.sockaddr** %3, align 8
  %4 = load %struct.sockaddr*, %struct.sockaddr** %3, align 8
  %5 = icmp eq %struct.sockaddr* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %10

7:                                                ; preds = %1
  %8 = load %struct.sockaddr*, %struct.sockaddr** %3, align 8
  %9 = call i32* @ifa_ifwithnet(%struct.sockaddr* %8)
  store i32* %9, i32** %2, align 8
  br label %10

10:                                               ; preds = %7, %6
  %11 = load i32*, i32** %2, align 8
  ret i32* %11
}

declare dso_local i32* @ifa_ifwithnet(%struct.sockaddr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
